booktesting/frontend.yaml
apiVersion: apps/v1 #extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
  namespace: booktest
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: brendanburns/journal-server:latest
        imagePullPolicy: IfNotPresent
        name: frontend
        volumeMounts:
          - name: passwd-volume
            readOnly: true
            mountPath: "/etc/redis-passwd"
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        resources:
        #  request:
        #    cpu: "1.0"
        #    memory: "1G"
          limits:
            cpu: "1.0"
            memory: "1G"
      volumes:
      - name: passwd-volume
        secret:
         secretName: redis-passwd 
      dnsPolicy: ClusterFirst
      restartPolicy: Always
