booktesting/fs.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: fileserver
    name: fileserver
    namespace: booktest
spec:
    replicas: 2
    selector:
        matchLabels:
            app: fileserver
    template:
        metadata:
            labels:
                app: fileserver
        spec:
            containers:
                - image: server.js #check how to do pull the image from git or wherever
                  imagePullPolicy: IfNotPresent
                  name: fileserver
                  terminationMessagePath: /dev/termination-log
                  terminationMessagePolicy: File
                  resources:
                      #request:
                          #cpu: "1.0"
                          #memory: "1G"
                      limits:
                        cpu: "1.0"
                        memory: "1G"
            dnsPolicy: ClusterFirst
            restartPolicy: Always
