booktesting/redis-statefullset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: booktest
spec:
  serviceName: "redis"
  replicas: 3
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:5-alpine
          ports:
            - containerPort: 6379
              name: redis
          volumeMounts:
              - name: data
                mountPath: /data
              - name: script
                mountPath: /scripts/launch.sh
                subPath: launch.sh
              - name: passwd-volume
                mountPath: /etc/redis-passwd
          command:
            - sh
            - -c
            - /scripts/launch.sh
      volumes:
        - name: script
          configMap:
            name: redis-config
            defaultMode: 0777
        - name: passwd-volume
          secret:
            secretName: redis-passwd
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 10Gi
