booktesting/fs-service.yml
apiVersion: v1
kind: Service
metadata: 
  labels:
    app: frontend
  name: frontend
  namespace: booktest
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: frontend
  sessionAffinity: None
  type: ClusterIP
