booktesting/redis-service.yml
apiVersion: v1
kind: Service
metadata: 
  labels:
    app: redis
  name: redis
  namespace: booktest
spec:
  ports:
    - port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app: redis
  sessionAffinity: None
  type: ClusterIP
