booktesting/redis-write.yml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: redis-write
    name: redis-write
    namespace: booktest
spec:
    clusterIP: None
    ports:
    - port: 6379
    selector:
      app: redis
