booktesting/service.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: frontend
    name: frontend
    namespace: booktest
spec:
    ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
    type: ClusterIP
    selector:
        app: frontend
